[metadata]
name = unbd
version = 0.0.1
author = pulkin
author_email = gpulkin@gmail.com
description = Mount directories in micropython using network block device (NBD) protocol
long_description = file:README.md
long_description_content_type = text/markdown

[options]
py_modules =
    unbd
    snapmount

[options.entry_points]
console_scripts =
    snapmount=snapmount:main
